--- a/GeneralClashMetaConfig.yml
+++ b/GeneralClashMetaConfig.yml
@@ -5,6 +5,12 @@ mode: rule                            # 规则模式：rule（规则） / global
 ipv6: true                            # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
 log-level: info                       # 设置日志输出级别 (5 个级别：silent / error / warning / info / debug）
 mixed-port: 7890                      # 混合端口，HTTP和SOCKS5用一个端口
+socks-port: 7891
+port: 7892
+
+external-controller: 127.0.0.1:9097
+secret: 'KeeJ8bqDAEMv2Aowzu4orDDs'
+
 unified-delay: true                   # 统一延迟，更换延迟计算方式，去除握手等额外延迟
 tcp-concurrent: true                  # 【Meta专属】TCP 并发连接所有 IP, 将使用最快握手的 TCP
 keep-alive-interval: 15               # TCP keep alive interval
