--- a/GeneralClashMetaConfig.yml
+++ b/GeneralClashMetaConfig.yml
@@ -10,6 +10,7 @@ port: 7892
 
 external-controller: 127.0.0.1:9097
 secret: 'KeeJ8bqDAEMv2Aowzu4orDDs'
+external-ui: /etc/mihomo/ui
 
 unified-delay: true                   # 统一延迟，更换延迟计算方式，去除握手等额外延迟
 tcp-concurrent: true                  # 【Meta专属】TCP 并发连接所有 IP, 将使用最快握手的 TCP
