--- a/GeneralClashMetaConfig.yml
+++ b/GeneralClashMetaConfig.yml
@@ -7,9 +7,9 @@ log-level: info                       # 设置日志输出级别 (5 个级别：
 mixed-port: 7890                      # 混合端口，HTTP和SOCKS5用一个端口
 socks-port: 7891
 port: 7892
-
-external-controller: 127.0.0.1:9097
-secret: 'KeeJ8bqDAEMv2Aowzu4orDDs'
+allow-lan: true
+external-controller: 127.0.0.1:9095
+secret: ''
 
 unified-delay: true                   # 统一延迟，更换延迟计算方式，去除握手等额外延迟
 tcp-concurrent: true                  # 【Meta专属】TCP 并发连接所有 IP, 将使用最快握手的 TCP
