--- a/GeneralClashMetaConfig.yml
+++ b/GeneralClashMetaConfig.yml
@@ -8,8 +8,8 @@ mixed-port: 7890                      # 混合端口，HTTP和SOCKS5用一个端
 socks-port: 7891
 port: 7892
 allow-lan: true
-external-controller: 127.0.0.1:9095
-secret: ''
+external-controller: 0.0.0.1:9095
+secret: ""
 
 unified-delay: true                   # 统一延迟，更换延迟计算方式，去除握手等额外延迟
 tcp-concurrent: true                  # 【Meta专属】TCP 并发连接所有 IP, 将使用最快握手的 TCP
