--- a/GeneralSurgeConfig.yml
+++ b/GeneralSurgeConfig.yml
@@ -10,5 +10,5 @@ ipv6 = true
 ipv6-vif = auto
 test-timeout = 5
 loglevel = notify
-http-api-web-dashboard = true
+#http-api-web-dashboard = true
 encrypted-dns-server = h3://223.5.5.5/dns-query
