--- a/modifiedsurgeversion.ini
+++ b/modifiedsurgeversion.ini
@@ -10,7 +10,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiysurge.list
+ruleset=DEVICE:macmini-m1,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiysurge.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiydirect.list
 ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiyapplemusic.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
