--- a/GeneralSurgeConfig.yml
+++ b/GeneralSurgeConfig.yml
@@ -12,3 +12,7 @@ test-timeout = 5
 loglevel = notify
 #http-api-web-dashboard = true
 encrypted-dns-server = h3://223.5.5.5/dns-query
+
+[Rule]
+DOMAIN-SUFFIX,myhomesurge,DEVICE:macmini-m1
+IP-CIDR,192.168.50.0/24,DEVICE:macmini-m1
