--- a/modifiedclashmetaversion.ini
+++ b/modifiedclashmetaversion.ini
@@ -11,6 +11,7 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiydirect.list
+ruleset=🇺🇲 美国节点,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/t-mobile.list
 ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiyapplemusic.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
