--- a/modifiedsurgeversion.ini
+++ b/modifiedsurgeversion.ini
@@ -13,6 +13,7 @@
 ruleset=DEVICE:MACMINI-M1,[]DOMAIN-SUFFIX,timmysurge
 ruleset=DEVICE:MACMINI-M1,[]IP-CIDR,192.168.50.0/24,no-resolve
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiydirect.list
+ruleset=🇺🇲 美国节点,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/t-mobile.list
 ruleset=🇯🇵 日本节点,https://raw.githubusercontent.com/tiramisutimmy/timmyrules/main/timmydiyapplemusic.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
