--- a/GeneralClashMetaConfig.yml
+++ b/GeneralClashMetaConfig.yml
@@ -1,58 +1,397 @@
-# Merge Template for clash verge
-# The Merge format used to enhance profile
+#---------------------------------------------------#
+# 配置文件需要放置在 $HOME/.config/clash/config.yml
+# 或者运行目录下的config.yml
+#---------------------------------------------------#
 
-mode: rule                            # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
-ipv6: true                            # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
-log-level: info                       # 设置日志输出级别 (5 个级别：silent / error / warning / info / debug）
-mixed-port: 7890                      # 混合端口，HTTP和SOCKS5用一个端口
-socks-port: 7891
-port: 7892
+
+mode: rule                        # 规则模式：rule（规则） / global（全局代理）/ direct（全局直连）/ script (脚本)
+ipv6: true                        # 开启 IPv6 总开关，关闭阻断所有 IPv6 链接和屏蔽 DNS 请求 AAAA 记录
+log-level: info                   # 设置日志输出级别 (默认级别：silent，即不输出任何内容，以避免因日志内容过大而导致程序内存溢出）。
+                                  # 5 个级别：silent / error / warning / info / debug。级别越高日志输出量越大，越倾向于调试，若需要请自行开启。
+mixed-port: 7890                  # 混合端口 HTTP和SOCKS5用一个端口
+socks-port: 7891                  # SOCKS5 代理端口
+port: 7892                        # HTTP 代理端口
+# Transparent proxy server port for Linux (TProxy TCP and TProxy UDP)
+# tproxy-port: 7893
+
+# 允许其他设备经过 Clash 的代理端口访问互联网
 allow-lan: true
+# 绑定地址，仅允许其他设备通过这个地址访问 "*" 绑定所有 IP 地址 192.168.31.31 绑定单个 IPV4 地址 [aaaa::a8aa:ff:fe09:57d8] 绑定单个 IPV6 地址
+#bind-address:                     #监听IP白名单（当allow-lan：true），只允许列表设备
+#  '*'                             #全部设备
+#   192.168.122.11                 #单个ip4地址
+#   "[aaaa::a8aa:ff:fe09:57d8]"    #单个ip6地址
 
-external-controller: 0.0.0.0:9090
-secret:            # 登陆ui的密码
-external-ui: ui       # webui的基础路径
-external-ui-name: xd  # webui的下级路径
-external-ui-url: https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip
-
+#authentication: # http,socks 入口的验证用户名，密码
+#  - "username:password"
+#skip-auth-prefixes: # 设置跳过验证的 IP 段
+#  - 127.0.0.1/8
+#  - ::1/128
+#lan-allowed-ips: # 允许连接的 IP 地址段，仅作用于 allow-lan 为 true, 默认值为 0.0.0.0/0 和::/0
+#  - 0.0.0.0/0
+#  - ::/0
+#lan-disallowed-ips: # 禁止连接的 IP 地址段，黑名单优先级高于白名单，默认值为空
+#  - 192.168.0.3/32
+  
+external-controller: 0.0.0.0:9090     # RESTful API 监听地址
+#API 的口令 (可选)
+secret: "Ca6iufosgiAPrzyHuj"          # 登陆ui的密码
+external-ui: ui                       # webui的基础路径
+external-ui-name: xd                  # webui的下级路径
+#external-ui-url: https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip
 unified-delay: true                   # 统一延迟，更换延迟计算方式，去除握手等额外延迟
 tcp-concurrent: true                  # 【Meta专属】TCP 并发连接所有 IP, 将使用最快握手的 TCP
 keep-alive-interval: 15               # TCP keep alive interval
+#interface-name: en0 # 设置出口网卡
 
+#GEO
 geodata-mode: true                    # 【Meta专属】使用geoip.dat数据库(默认：false使用mmdb数据库)
 geodata-loader: standard              # 【Meta专属】使用标准加载器加载GEO文件（会提升内存占用）
-geox-url:                             # 自定义GEO文件下载地址
-  geoip: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat"
-  geosite: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat"
-  mmdb: "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb"
+#GEO数据库资源地址
+geox-url:
+  geoip: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat
+  geosite: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat
+  mmdb: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
+#  asn: https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb
+
 geo-auto-update: true                 # 【Meta专属】启用自动更新GEO文件
-geo-update-interval: 24               # 【Meta专属】自动更新GEO文件间隔
+geo-update-interval: 96               # 【Meta专属】自动更新GEO文件间隔
 global-ua: clash.meta                 # 【Meta专属】自定义全局更新文件时的下载UA（默认：clash.meta）
 
 find-process-mode: strict             # 匹配所有进程（always/strict/off）
+                                      # always, 开启，强制匹配所有进程 strict, 默认，由 mihomo 判断是否开启 off, 不匹配进程，推荐在路由器上使用此模式
 global-client-fingerprint: chrome     # 全局 TLS 指纹，优先低于 proxy 内的 client-fingerprint
                                       # 可选： "chrome","firefox","safari","ios","random","none" options.
-
+                                      
 profile:
   store-selected: true                # 存储 select 选择记录
   store-fake-ip: true                 # 持久化 fake-ip
 
+
+#hosts:                           #host，支持通配符（非通配符域名优先级高于通配符域名）
+# '*.clash.dev': 127.0.0.1     #例如foo.example.com>*.example.com>.example.com
+# 类似于 /etc/hosts, 仅支持配置单个 IP
+# '*.mihomo.dev': 127.0.0.1
+# '.dev': 127.0.0.1
+# 'alpha.mihomo.dev': '::1'
+# test.com: [1.1.1.1, 2.2.2.2]
+# home.lan: lan # lan 为特别字段，将加入本地所有网卡的地址
+# baidu.com: google.com # 只允许配置一个别名
+
 dns:
   enable: true                        # 关闭将使用系统 DNS
   ipv6: false                         # IPV6解析开关；如果为false，将返回ipv6结果为空
+# 如果DNS服务器支持DoH3会优先使用h3
+#  prefer-h3: true
+
+# 配置后面的nameserver、fallback和nameserver-policy向dns服务器的连接过程是否遵守遵守rules规则
+# 如果为false（默认值）则这三部分的dns服务器在未特别指定的情况下会直连
+# 如果为true，将会按照rules的规则匹配链接方式（走代理或直连），如果有特别指定则任然以指定值为准
+# 仅当proxy-server-nameserver非空时可以开启此选项, 强烈不建议和prefer-h3一起使用
+# 此外，这三者配置中的dns服务器如果出现域名会采用default-nameserver配置项解析，也请确保正确配置default-nameserver
+  respect-rules: true
+  
   enhanced-mode: fake-ip              # 模式：redir-host或fake-ip
   listen: 0.0.0.0:1053                # DNS 监听地址
-  use-hosts: true                     # 是否查询系统 hosts
+#  use-hosts: true                     # 是否查询系统 hosts
+  
   fake-ip-range: 198.18.0.1/16        # fakeip 下的 IP 段设置，tun 网卡的默认 ip 也使用此值
-  fake-ip-filter: ['+.lan', '+.msftncsi.com', 'msftconnecttest.com', '+.msftconnecttest.com', '*.msftncsi.com', '*.msftconnecttest.com']
-                                      # Fake-ip 过滤，列表中的域名返回真实IP
-  default-nameserver: [192.168.50.15]
-                                      # 解析非IP的dns用的dns服务器，只支持纯IP，（Meta可为其加密）
-  nameserver: [192.168.50.15]
-                                      # 默认DNS服务器，支持udp/tcp/dot/doh/doq
-  proxy-server-nameserver: [192.168.50.16]
-                                      # 代理DNS服务器，支持udp/tcp/dot/doh/doq
+# Fake-ip 过滤，列表中的域名返回真实IP
+  fake-ip-filter:
+    # 网络状态探测器
+    - "dns.msftncsi.com"
+    - "www.msftconnecttest.com"
+    - "ipv6.msftconnecttest.com"
+    #LAN
+    - "*.lan"
+    - "*.localdomain"
+    - "*.example"
+    - "*.invalid"
+    - "*.localhost"
+    - "*.test"
+    - "*.local"
+    - "*.home.arpa"
+    #放行NTP服务"
+    - "time.*.com"
+    - "time.*.gov"
+    - "time.*.edu.cn"
+    - "time.*.apple.com"
+    - "time1.*.com"
+    - "time2.*.com"
+    - "time3.*.com"
+    - "time4.*.com"
+    - "time5.*.com"
+    - "time6.*.com"
+    - "time7.*.com"
+    - "ntp.*.com"
+    - "ntp1.*.com"
+    - "ntp2.*.com"
+    - "ntp3.*.com"
+    - "ntp4.*.com"
+    - "ntp5.*.com"
+    - "ntp6.*.com"
+    - "ntp7.*.com"
+    - "*.time.edu.cn"
+    - "*.ntp.org.cn"
+    - "+.pool.ntp.org"
+    - "time1.cloud.tencent.com"
+    #放行网易云音乐"
+    - "music.163.com"
+    - "*.music.163.com"
+    - "*.126.net"
+    #百度音乐"
+    - "musicapi.taihe.com"
+    - "music.taihe.com"
+    #酷狗音乐"
+    - "songsearch.kugou.com"
+    - "trackercdn.kugou.com"
+    #酷我音乐"
+    - "*.kuwo.cn"
+    #JOOX音乐"
+    - "api-jooxtt.sanook.com"
+    - "api.joox.com"
+    - "joox.com"
+    #QQ音乐"
+    - "y.qq.com"
+    - "*.y.qq.com"
+    - "streamoc.music.tc.qq.com"
+    - "mobileoc.music.tc.qq.com"
+    - "isure.stream.qqmusic.qq.com"
+    - "dl.stream.qqmusic.qq.com"
+    - "aqqmusic.tc.qq.com"
+    - "amobile.music.tc.qq.com"
+    #虾米音乐"
+    - "*.xiami.com"
+    #咪咕音乐"
+    - "*.music.migu.cn"
+    - "music.migu.cn"
+    #QQ快捷登录
+    - "localhost.ptlogin2.qq.com"
+    - "localhost.sec.qq.com"
+    #Game
+    #Nintendo Switch
+    - "+.srv.nintendo.net"
+    #Sony PlayStation
+    - "+.stun.playstation.net"
+    #Microsoft Xbox
+    - "xbox.*.microsoft.com"
+    - "xnotify.xboxlive.com"
+    - "+.ipv6.microsoft.com"
+    # Battle.Net
+    - "+.battlenet.com.cn"
+    - "+.wotgame.cn"
+    - "+.wggames.cn"
+    - "+.wowsgame.cn"
+    - "+.wargaming.net"
+    #Golang
+    - "proxy.golang.org"
+    #STUN
+    - "stun.*.*"
+    - "stun.*.*.*"
+    - "+.stun.*.*"
+    - "+.stun.*.*.*"
+    - "+.stun.*.*.*.*"
+    - "+.pvp.net"
+    #Linksys Router
+    - "heartbeat.belkin.com"
+    - "*.linksys.com"
+    - "*.linksyssmartwifi.com"
+    #ASUS Router
+    - "*.router.asus.com"
+    #Apple Software Update Service
+    - "mesu.apple.com"
+    - "swscan.apple.com"
+    - "swquery.apple.com"
+    - "swdownload.apple.com"
+    - "swcdn.apple.com"
+    - "swdist.apple.com"
+    #Google
+    - "lens.l.google.com"
+    - "stun.l.google.com"
+    #Netflix
+    - "+.nflxvideo.net"
+    #FinalFantasy XIV Worldwide Server & CN Server
+    - "*.square-enix.com"
+    - "*.finalfantasyxiv.com"
+    - "*.ffxiv.com"
+    - "*.ff14.sdo.com"
+    - "ff.dorado.sdo.com"
+    #Bilibili
+    - "*.mcdn.bilivideo.cn"
+    #Disney Plus
+    - "+.media.dssott.com"
+    # Mijia
+    - 'Mijia Cloud'
+    # UU Booster
+    - "+.uu.163.com"
+    - "ps.res.netease.com"
+    # 迅雷
+    - '+.sandai.net'
+    - '+.n0808.com'
+    - '+.3gppnetwork.org'
+    
+#用于解析其他DNS服务器、和节点的域名, 必须为IP, 可为加密DNS。注意这个只用来解析节点和其他的dns，其他网络请求不归他管
+#解析非IP的dns用的dns服务器，只支持纯IP
+  default-nameserver:
+    - 192.168.50.25
+#    - tls://223.5.5.5:853
+# 默认DNS服务器，支持udp/tcp/dot/doh/doq 这部分为主要 DNS 配置，影响所有直连，确保使用对大陆解析精准的 DNS
+  nameserver:
+    - 192.168.50.25
+#    - https://1.1.1.1/dns-query
+#    - https://223.5.5.5/dns-query
+#    - 114.114.114.114 # default value
+#    - 8.8.8.8 # default value
+#    - tls://223.5.5.5:853 # DNS over TLS
+#    - https://doh.pub/dns-query # DNS over HTTPS
+#    - https://dns.alidns.com/dns-query#h3=true # 强制 HTTP/3，与 perfer-h3 无关，强制开启 DoH 的 HTTP/3 支持，若不支持将无法使用
+#    - https://mozilla.cloudflare-dns.com/dns-query#DNS&h3=true # 指定策略组和使用 HTTP/3
+#    - dhcp://en0 # dns from dhcp
+#    - quic://dns.adguard.com:784 # DNS over QUIC
+#    - '8.8.8.8#RULES' # 效果同respect-rules，但仅对该服务器生效
+#    - '8.8.8.8#en0' # 兼容指定 DNS 出口网卡
+    
+# 代理DNS服务器，支持udp/tcp/dot/doh/doq
+  proxy-server-nameserver:
+# 节点解析dns 【Meta专属】 解析代理服务器域名 不写时用nameserver解析
+    - 192.168.50.26
+#    - https://1.1.1.1/dns-query
+#    - https://223.5.5.5/dns-query
+#    - https://dns.google/dns-query
+#    - tls://one.one.one.one
+
+# fallback使用国内DNS服务器作为后备
+# 当配置 fallback 时，会查询 nameserver 中返回的 IP 是否为 CN，非必要配置
+# 当不是 CN，则使用 fallback 中的 DNS 查询结果
+# 确保配置 fallback 时能够正常查询
+#  fallback:                          #回落DNS服务器，支持udp/tcp/dot/doh/doq
+#    - https://doh.dns.sb/dns-query
+#    - tcp://208.67.222.222:443
+#    - quic://a.passcloud.xyz:784     #【Meta专属】Dns over quic
+#    - 'tls://8.8.4.4:853#DNSg'       #【Meta专属】"#DNSg"代表该DNS服务器通过
+                                      # 名为"DNSg"的proxy Group访问
+#geoip: true 和 geoip-code: CN 确保只有中国IP的查询会使用fallback DNS
+#Fake-ip过滤，列表中的域名返回真实ip
+#  fallback-filter:                   #回落DNS服务器过滤
+#    geoip: true                      #为真时，不匹配为geoip规则的使用fallback返回结果
+#    geoip-code: CN                   #geoip匹配区域设定
+#                                     #当 nameserver 域名的 IP 查询 geoip 库为 CN 时，不使用 fallback 中的 DNS 查询结果
+#                                     #配置强制 fallback，优先于 IP 判断，具体分类自行查看 geosite 库
+#    geosite:                         #【Meta专属】设定geosite某分类使用fallback返回结果
+#      - gfw
+#   如果不匹配 ipcidr 则使用 nameservers 中的结果
+#    ipcidr:                          #列表中的ip使用fallback返回解析结果
+#      - 240.0.0.0/4
+#    domain:                          #列表中的域名使用fallback返回解析结果
+#      - '+.google.com'
+#      - '+.facebook.com'
+#      - '+.youtube.com'
+      
+#指定域名使用自定义DNS解析
   nameserver-policy:
-    "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn": [192.168.50.15]
-    "geosite:speedtest": ["https://1.1.1.1/dns-query#Proxy"]
-                                      # 指定域名查询的解析服务器，可使用 geosite, 优先于 nameserver/fallback 查询
+
+#    "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn": [192.168.50.15]
+    "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn":
+# 国内域名使用国内服务器解析
+      - 192.168.50.25
+#      - https://223.5.5.5/dns-query
+#      - https://doh.pub/dns-query
+    "geosite:category-ads-all": rcode://success
+    
+    "www.baidu.com,+.google.cn": [223.5.5.5, https://dns.alidns.com/dns-query]
+    ## global，dns 为 rule-providers 中的名为 global 和 dns 规则订阅，
+    ## 且 behavior 必须为 domain/classical，当为 classical 时仅会生效域名类规则
+    # "rule-set:global,dns": 8.8.8.8
+    
+    "geosite:geolocation-!cn":
+# 非国内域名使用国外服务器解析
+      - 192.168.50.26
+#      - "https://dns.cloudflare.com/dns-query"
+#      - "https://dns.google/dns-query"
+
+
+
+# Tun 配置
+#tun:
+#  enable: false
+#  stack: system # gvisor/mixed
+#  dns-hijack:
+#    - 0.0.0.0:53 # 需要劫持的 DNS
+  # auto-detect-interface: true # 自动识别出口网卡
+  # auto-route: true # 配置路由表
+  # mtu: 9000 # 最大传输单元
+  # gso: false # 启用通用分段卸载，仅支持 Linux
+  # gso-max-size: 65536 # 通用分段卸载包的最大大小
+#  auto-redirect: false # 自动配置 iptables 以重定向 TCP 连接。仅支持 Linux。带有 auto-redirect 的 auto-route 现在可以在路由器上按预期工作，无需干预。
+  # strict-route: true # 将所有连接路由到 tun 来防止泄漏，但你的设备将无法其他设备被访问
+#  route-address-set: # 将指定规则集中的目标 IP CIDR 规则添加到防火墙, 不匹配的流量将绕过路由, 仅支持 Linux，且需要 nftables，`auto-route` 和 `auto-redirect` 已启用。
+#    - ruleset-1
+#    - ruleset-2
+#  route-exclude-address-set: # 将指定规则集中的目标 IP CIDR 规则添加到防火墙, 匹配的流量将绕过路由, 仅支持 Linux，且需要 nftables，`auto-route` 和 `auto-redirect` 已启用。
+#    - ruleset-3
+#    - ruleset-4
+#  route-address: # 启用 auto-route 时使用自定义路由而不是默认路由
+#    - 0.0.0.0/1
+#    - 128.0.0.0/1
+#    - "::/1"
+#    - "8000::/1"
+  # inet4-route-address: # 启用 auto-route 时使用自定义路由而不是默认路由（旧写法）
+  #   - 0.0.0.0/1
+  #   - 128.0.0.0/1
+  # inet6-route-address: # 启用 auto-route 时使用自定义路由而不是默认路由（旧写法）
+  #   - "::/1"
+  #   - "8000::/1"
+  # endpoint-independent-nat: false # 启用独立于端点的 NAT
+  # include-interface: # 限制被路由的接口。默认不限制，与 `exclude-interface` 冲突
+  #   - "lan0"
+  # exclude-interface: # 排除路由的接口，与 `include-interface` 冲突
+  #   - "lan1"
+  # include-uid: # UID 规则仅在 Linux 下被支持，并且需要 auto-route
+  # - 0
+  # include-uid-range: # 限制被路由的的用户范围
+  # - 1000:9999
+  # exclude-uid: # 排除路由的的用户
+  #- 1000
+  # exclude-uid-range: # 排除路由的的用户范围
+  # - 1000:9999
+
+  # Android 用户和应用规则仅在 Android 下被支持
+  # 并且需要 auto-route
+
+  # include-android-user: # 限制被路由的 Android 用户
+  # - 0
+  # - 10
+  # include-package: # 限制被路由的 Android 应用包名
+  # - com.android.chrome
+  # exclude-package: # 排除被路由的 Android 应用包名
+  # - com.android.captiveportallogin
+
+#ebpf 配置
+#ebpf:
+#  auto-redir: # redirect 模式，仅支持 TCP
+#    - eth0
+#  redirect-to-tun: # UDP+TCP 使用该功能请勿启用 auto-route
+#    - eth0
+    
+#sniffer:
+#  enable: false
+#  force-dns-mapping: true         #对 redir-host 类型识别的流量进行强制嗅探
+#                                  #如：Tun、Redir 和 TProxy 并 DNS 为 redir-host 皆属于
+#  parse-pure-ip: true             #对所有未获取到域名的流量进行强制嗅探
+#  override-destination: false     #是否使用嗅探结果作为实际访问，默认为 true 全局配置，优先级低于 sniffer.sniff 实际配置
+#一个数组，里面可以包含多个协议对象。每种协议对象包含
+#ports字段，表示端口范围。示例：ports: [80, 8080-8880]
+#override-destination字段（可选），用于覆盖全局override-destination设置
+#  sniff: # TLS 和 QUIC 默认如果不配置 ports 默认嗅探 443
+#    HTTP:
+#      ports: [80, 8080-8880]
+#      override-destination: true
+#    TLS:
+#      ports: [443, 8443]
+#    QUIC:
+#      ports: [443, 8443]
+#  force-domain:
+#    - +.v2ex.com     #需要强制嗅探的域名（默认情况下只对 IP 进行嗅探）
+#  skip-domain:
+#    - "Mijia Cloud"    #需要跳过嗅探的域名。主要解决部分站点 sni 字段非域名，导致嗅探结果异常的问题，如米家设备Mijia Cloud
+#    - "+.push.apple.com"
