--- a/GeneralSurgeConfig.yml
+++ b/GeneralSurgeConfig.yml
@@ -70,7 +70,7 @@ test-timeout = 5
 # always-real-ip = *.test.com
 
 # > 使用本地主机代理,默认情况下，如果使用代理策略，则始终在远程服务器上执行 DNS 查找。启用此选项后，如果存在目标域的本地 DNS 映射结果，则 Surge 会使用 IP 地址而不是域来设置代理连接。
-use-local-host-item-for-proxy = false
+use-local-host-item-for-proxy = true
 
 # > 要更新的 GeoIP 数据库的 URL
 # geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
