--- a/GeneralSurgeConfig.yml
+++ b/GeneralSurgeConfig.yml
@@ -18,7 +18,7 @@ ipv6-vif = auto
 # > dns服务器 上游DNS服务器的IP地址
 dns-server = 223.5.5.5, 119.29.29.29
 # > 劫持DNS,默认情况下，Surge 仅返回发送到 Surge DNS 地址 （198.18.0.2） 的 DNS 查询的虚假 IP 地址。发送到标准 DNS 的查询将被转发。某些设备或软件始终使用硬编码的 DNS 服务器。（例如，Google Speakers始终使用 8.8.8.8）。您可以使用此选项劫持查询以获取虚假地址。您可以使用 hijack-dns = *:53 劫持所有DNS查询
-# hijack-dns = *:53
+hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > 使 Surge 将 TCP 连接视为 HTTP 请求。Surge HTTP 引擎将处理请求，并且所有高级功能都将可用，例如捕获、重写和脚本编写。此参数属于主机列表类型，详细规则请参见：https://manual.nssurge.com/others/host-list.html
 # force-http-engine-hosts =
 # > 加密 DNS 跟随出站模式,默认情况下，加密的 DNS 查找使用直接出站。启用该选项将使 DOH 遵循出站模式设置和规则。
