--- a/GeneralSurgeConfig.yml
+++ b/GeneralSurgeConfig.yml
@@ -72,9 +72,14 @@ test-timeout = 5
 # > 使用<ip-address> 直接使用 IPv4/IPv6 地址（而不是域）匹配所有主机名
 # > -*icloud*, -*.mzstatic.com, -*.facebook.com, -*.instagram.com, -*.twitter.com, -*dropbox*, -*apple*, -*.amazonaws.com, -<ip-address>, *
 # always-real-ip = *.test.com
+# 使用 https://ruleset.skk.moe/Modules/sukka_common_always_realip.sgmodule
 
 # > 使用本地主机代理,默认情况下，如果使用代理策略，则始终在远程服务器上执行 DNS 查找。启用此选项后，如果存在目标域的本地 DNS 映射结果，则 Surge 会使用 IP 地址而不是域来设置代理连接。
 use-local-host-item-for-proxy = true
+
+# Surge 的 Local DNS Mapping 功能可以解决 DNS 分流的问题。在项目中我使用 domestic.ts 文件记录域名和需要使用的 DNS，然后脚本会自动化生成 DNS Mapping 的 Surge Module：
+# 链接：https://blog.skk.moe/post/i-have-my-unique-surge-setup/
+# 使用 https://ruleset.skk.moe/Modules/sukka_local_dns_mapping.sgmodule
 
 # > 要更新的 GeoIP 数据库的 URL
 # geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
