--- a/ClashMetaConfig.yaml
+++ b/ClashMetaConfig.yaml
@@ -399,10 +399,9 @@ dns:
 #    - "+.push.apple.com"
   
 proxy-providers:
-  nextrojan:
+  kur:
     type: http
     url: "http://127.0.0.1:25500/sub?target=clash&url=xxxxxx&append_type=true&emoji=true&list=true&tfo=false&fdn=false&sort=true&udp=true&scv=true"
-
     interval: 1296000
     path: ./proxies/nextrojan.yaml
     health-check:
@@ -416,7 +415,11 @@ proxy-providers:
 #      skip-cert-verify: true
 #      udp: true
 #      ip-version: ipv4-prefer
-
+     additional-prefix: "kur"
+  nex:
+     .......
+     additional-prefix: "nex"
+     
 proxy-groups:
   - {name: 节点选择, type: select, proxies: [DIRECT, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, 韩国节点]}
 #  - {name: 网络测试, type: select, proxies: [节点选择, DIRECT, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, 韩国节点]}
