--- a/ClashMetaConfig.yaml
+++ b/ClashMetaConfig.yaml
@@ -84,7 +84,7 @@ dns:
   enable: true                        # 关闭将使用系统 DNS
   ipv6: false                         # IPV6解析开关；如果为false，将返回ipv6结果为空
 # 如果DNS服务器支持DoH3会优先使用h3
-#  prefer-h3: false
+  prefer-h3: false
 
 # 配置后面的nameserver、fallback和nameserver-policy向dns服务器的连接过程是否遵守遵守rules规则
 # 如果为false（默认值）则这三部分的dns服务器在未特别指定的情况下会直连
@@ -235,11 +235,11 @@ dns:
 #用于解析其他DNS服务器、和节点的域名, 必须为IP, 可为加密DNS。注意这个只用来解析节点和其他的dns，其他网络请求不归他管
 #解析非IP的dns用的dns服务器，只支持纯IP
   default-nameserver:
-    - 192.168.50.25
+    - 192.168.55.15
 #    - tls://223.5.5.5:853
 # 默认DNS服务器，支持udp/tcp/dot/doh/doq 这部分为主要 DNS 配置，影响所有直连，确保使用对大陆解析精准的 DNS
   nameserver:
-    - 192.168.50.25
+    - quic://192.168.55.15:853
 #    - https://1.1.1.1/dns-query
 #    - https://223.5.5.5/dns-query
 #    - 114.114.114.114 # default value
@@ -256,7 +256,7 @@ dns:
 # 代理DNS服务器，支持udp/tcp/dot/doh/doq
   proxy-server-nameserver:
 # 节点解析dns 【Meta专属】 解析代理服务器域名 不写时用nameserver解析
-    - 192.168.50.26
+    - quic://192.168.55.16:853
 #    - https://1.1.1.1/dns-query
 #    - https://223.5.5.5/dns-query
 #    - https://dns.google/dns-query
@@ -291,25 +291,27 @@ dns:
       
 #指定域名使用自定义DNS解析
   nameserver-policy:
-
-#    "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn": [192.168.50.15]
+  
+#    "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn": [192.168.55.15]
     "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn":
 # 国内域名使用国内服务器解析
-      - 192.168.50.25
+      - quic://192.168.55.15:853
 #      - https://223.5.5.5/dns-query
 #      - https://doh.pub/dns-query
     "geosite:category-ads-all": rcode://success
     
-    "www.baidu.com,+.google.cn": [223.5.5.5, https://dns.alidns.com/dns-query]
+#    "www.baidu.com,+.google.cn": [223.5.5.5, https://dns.alidns.com/dns-query]
+    "www.baidu.com,+.google.cn": [192.168.55.15, quic://192.168.55.15:853]
     ## global，dns 为 rule-providers 中的名为 global 和 dns 规则订阅，
     ## 且 behavior 必须为 domain/classical，当为 classical 时仅会生效域名类规则
     # "rule-set:global,dns": 8.8.8.8
     
     "geosite:geolocation-!cn":
 # 非国内域名使用国外服务器解析
-      - 192.168.50.26
-#      - "https://dns.cloudflare.com/dns-query"
-#      - "https://dns.google/dns-query"
+      - quic://192.168.55.16:853
+#      - https://dns.cloudflare.com/dns-query
+#      - https://1.1.1.1/dns-query
+#      - https://dns.google/dns-query
 
 
 
