--- a/config dialer兔头.yaml
+++ b/config dialer兔头.yaml
@@ -237,7 +237,7 @@ dns:
 #    - 223.5.5.5
 # 默认DNS服务器，支持udp/tcp/dot/doh/doq 这部分为主要 DNS 配置，影响所有直连，确保使用对大陆解析精准的 DNS
   nameserver:
-    - 192.168.55.15
+    - quic://192.168.55.15:853
 #    - https://1.1.1.1/dns-query
 #    - https://223.5.5.5/dns-query
 #    - 114.114.114.114 # default value
@@ -254,7 +254,7 @@ dns:
 # 代理DNS服务器，支持udp/tcp/dot/doh/doq
   proxy-server-nameserver:
 # 节点解析dns 【Meta专属】 解析代理服务器域名 不写时用nameserver解析
-    - 192.168.55.16
+    - quic://192.168.55.16:853
 #    - https://1.1.1.1/dns-query
 #    - https://223.5.5.5/dns-query
 #    - https://dns.google/dns-query
@@ -290,25 +290,26 @@ dns:
 #指定域名使用自定义DNS解析
   nameserver-policy:
 
-#    "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn": [192.168.50.15]
+#    "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn": [192.168.55.15]
     "geosite:cn,private,bytedance,steam@cn,epicgames,microsoft@cn,apple@cn":
 # 国内域名使用国内服务器解析
-      - 192.168.55.15
+      - quic://192.168.55.15:853
 #      - https://223.5.5.5/dns-query
 #      - https://doh.pub/dns-query
     "geosite:category-ads-all": rcode://success
     
-    "www.baidu.com,+.google.cn": [223.5.5.5, https://dns.alidns.com/dns-query]
+#    "www.baidu.com,+.google.cn": [223.5.5.5, https://dns.alidns.com/dns-query]
+    "www.baidu.com,+.google.cn": [192.168.55.15, quic://192.168.55.15:853]
     ## global，dns 为 rule-providers 中的名为 global 和 dns 规则订阅，
     ## 且 behavior 必须为 domain/classical，当为 classical 时仅会生效域名类规则
     # "rule-set:global,dns": 8.8.8.8
     
     "geosite:geolocation-!cn":
 # 非国内域名使用国外服务器解析
-      - 192.168.55.16
+      - quic://192.168.55.16:853
+#      - https://dns.cloudflare.com/dns-query
 #      - https://1.1.1.1/dns-query
-#      - "https://dns.google/dns-query"
-
+#      - https://dns.google/dns-query
 
 
 # Tun 配置
